| Summary: | ASTERISK-27854: rtp: Crash in off-nominal case where RTP instance can't be set up | ||
| Reporter: | Lei Fu (playsolo) | Labels: | |
| Date Opened: | 2018-05-15 03:08:37 | Date Closed: | 2018-09-24 09:26:46 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/RTP |
| Versions: | 15.4.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | centos 7 | Attachments: | ( 0) asterisk-full.txt ( 1) core-dump-93482.tar.gz |
| Description: | asterisk 15 crashed
I was using AMI to generate calls, perl for AGI and node js for ARI | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-05-15 03:08:39.066-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2018-05-15 03:16:12.752-0500 We need additional information such as the Asterisk console output and further information about how Asterisk is being used. As it is, though, the backtrace shows that this is an off-nominal scenario where an RTP instance failed to get set up as expected. By: Lei Fu (playsolo) 2018-05-15 03:39:07.732-0500 We have the following error in asterisk full, we didn't increase open files number, but should it crash due to this issue? By: Joshua C. Colp (jcolp) 2018-05-15 04:01:17.114-0500 Ideally it should not crash, but it is in the off-nominal scenario which explains why it occurred. By: Friendly Automation (friendly-automation) 2018-09-24 09:26:46.846-0500 Change 10233 merged by George Joseph: res_rtp_asterisk: Fix crash on ast_rtp_new failure. [https://gerrit.asterisk.org/10233|https://gerrit.asterisk.org/10233] By: Friendly Automation (friendly-automation) 2018-09-24 09:27:15.789-0500 Change 10234 merged by George Joseph: res_rtp_asterisk: Fix crash on ast_rtp_new failure. [https://gerrit.asterisk.org/10234|https://gerrit.asterisk.org/10234] By: Friendly Automation (friendly-automation) 2018-09-24 09:27:46.180-0500 Change 10232 merged by George Joseph: res_rtp_asterisk: Fix crash on ast_rtp_new failure. [https://gerrit.asterisk.org/10232|https://gerrit.asterisk.org/10232] | ||